@@ -1,9 +1,9 @@
-// 1.21.1	2025-07-09T22:43:34.2143662	Advancements
+// 1.21.1	2025-07-27T22:49:00.4288379	Advancements
 1196048bb0038926c134fbfd0522d41ff1382241 data/chilibulletweapons/advancement/main/bullet_chili.json
 ff7b2f877930d94f9b8257949fb4ad399eecc624 data/chilibulletweapons/advancement/main/exploded_chili_arrow.json
 6e50175e164480663b6b8577921ce915020d0971 data/chilibulletweapons/advancement/main/killed_by_chili_bullet.json
-7752d508a7dfb391fddb881935238c60514639a2 data/chilibulletweapons/advancement/main/machine_gun_mending_1.json
+e8b6385c9cb43a5a11af3b56bd03df801a0252f4 data/chilibulletweapons/advancement/main/machine_gun_mending_1.json
 0a2ae2384f97e45d627fd77e0a66f9322a8e01e7 data/chilibulletweapons/advancement/main/root.json
-e66bbf11546e591556577c307d72150885f0bc62 data/chilibulletweapons/advancement/main/shot_gun.json
-f861d79e57f1bb15999c49dbdda89c55bdad535d data/chilibulletweapons/advancement/main/shot_machine_gun.json
-7116d13441d0bda727372dbf9e77b2f0fce93506 data/chilibulletweapons/advancement/main/upgraded_gun.json
+57c45c5a960c74f2ea621765b047149a23707101 data/chilibulletweapons/advancement/main/shot_gun.json
+4595054f745a511768d33950d155ffed1c46b149 data/chilibulletweapons/advancement/main/shot_machine_gun.json
+ac416da6c2e6b1c2b2beeb6dc05561eea9660b94 data/chilibulletweapons/advancement/main/upgraded_gun.json
