@@ -23,9 +23,6 @@
       "translate": "advancements.chilibulletweapons.main.shot_gun.description"
     },
     "icon": {
-      "components": {
-        "chilibulletweapons:gun_contents": {}
-      },
       "count": 1,
       "id": "chilibulletweapons:gun"
     },
