@@ -15,9 +15,6 @@
       "translate": "advancements.chilibulletweapons.main.shot_machine_gun.description"
     },
     "icon": {
-      "components": {
-        "chilibulletweapons:gun_contents": {}
-      },
       "count": 1,
       "id": "chilibulletweapons:machine_gun"
     },
