@@ -19,9 +19,6 @@
     " pb"
   ],
   "result": {
-    "components": {
-      "chilibulletweapons:gun_contents": {}
-    },
     "count": 1,
     "id": "chilibulletweapons:gun"
   }
