@@ -3,6 +3,8 @@
 [Source](https://github.com/Iunius118/ChiliBulletWeapons).
 
 ## [Unreleased]
+### Removed
+- Remove migration of gun upgrade data from deprecated data components.
 
 ## [2.0.0-beta.4]
 ### Added
